re-org per james' doc

--- a/samples/structure-sample-01/EPUB/xhtml/brief-toc.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/brief-toc.xhtml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
+<?xml-model href="../../../../../../../Users/matt.garrish/Desktop/epubcheck_samples/edu-headings.sch" type="application/xml" schematypens="http://purl.oclc.org/dsdl/schematron"?>
 <html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title> Brief TOC </title>
@@ -7,10 +8,10 @@
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="frontmatter">
+	<body class="fixed" epub:type="frontmatter" aria-label="brief toc">
 		<nav class="toc toc_brief" id="P700048580600069A">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="vii" epub:type="pagebreak" id="P700048580600069B"/>Brief TOC</h1>
+				<h2 class="title" epub:type="title"><span class="pagebreak" title="vii" epub:type="pagebreak" id="P700048580600069B"/>Brief TOC</h2>
 			</header>
 			<div class="tocproductfrontmatter">
 				<ol class="tocentrylist">
@@ -21,13 +22,10 @@
 				<ol class="tocentrylist">
 					<li class="tocpart"><p><a href="part01.xhtml#P70004858060006B5"><span class="title" epub:type="title"><span class="label" epub:type="label">Part </span><span class="number" epub:type="ordinal">1 </span>Part Title</span></a></p>
 						<ol class="tocentrylist">
-							<li class="tocchapter"><p><a href="chapter01.xhtml#P70004858060006B8"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">1 </span>Lists</span></a></p></li>
-							<li><p><a href="chapter02.xhtml#P70004858060006F9"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2 </span>Asides</span></a></p></li>
-							<li><p><a href="chapter03.xhtml#P700048580600071E"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">3 </span>Figures and Tables</span></a></p></li>
-							<li><p><a href="chapter04.xhtml#P7000485806000731"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">4 </span>Linked Content</span></a></p></li>
-							<li><p><a href="chapter05.xhtml#P700048580600074B"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">5 </span>Sections</span></a></p></li>
-							<li><p><a href="chapter06.xhtml#P700048580600075C"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">6 </span>Typical Chapter Frontmatter and Backmatter Sections</span></a></p></li>
-							<li><p><a href="chapter07.xhtml#P700048580600077C"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">7 </span>Inlines</span></a></p></li>
+							<li><p><a href="asides.xhtml#P70004858060006F9"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2 </span>Asides</span></a></p></li>
+							<li><p><a href="figures-tables.xhtml#P700048580600071E"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">3 </span>Figures and Tables</span></a></p></li>
+							<li><p><a href="links.xhtml#P7000485806000731"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">4 </span>Linked Content</span></a></p></li>
+							<li><p><a href="body-content.xhtml#P700048580600075C"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">6 </span>Typical Chapter Frontmatter and Backmatter Sections</span></a></p></li>
 						</ol>
 					</li>
 				</ol>
@@ -42,5 +40,6 @@
 					<li class="tocrearnotes" epub:type="rearnote"><p><a href="endnotes.xhtml#P70004858060007D1"><span class="title" epub:type="title"><span class="label" epub:type="label">Endnotes: </span></span><span class="subtitle" epub:type="subtitle">Subtitle text</span></a></p></li>
 					<li class="toccreditset"><p><a href="credits.xhtml#P70004858060007D6"><span class="title" epub:type="title"><span class="label" epub:type="label">Credits</span></span></a></p></li>
 				</ol></div>
-		</nav></body>
+		</nav>
+	</body>
 </html>
