--- a/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
@@ -19,13 +19,13 @@
 				</header>
 				<ol class="rearnotelist">
 					<li class="rearnote" epub:type="rearnote" id="P70004858060007D3">
-						<p><span class="number" epub:type="ordinal"><a href="chapter02.xhtml#r__P70004858060007D3">1</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
+						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D3">1</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
 					<li class="rearnote" epub:type="rearnote" id="P70004858060007D4">
-						<p><span class="number" epub:type="ordinal"><a href="chapter02.xhtml#r__P70004858060007D4">2</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
+						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D4">2</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
 					<li class="rearnote" epub:type="rearnote" id="P70004858060007D5">
-						<p><span class="number" epub:type="ordinal"><a href="chapter02.xhtml#r__P70004858060007D5">3</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
+						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D5">3</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
 				</ol>
 			</section>
