--- a/samples/structure-sample-01/EPUB/xhtml/full-toc.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/full-toc.xhtml
@@ -23,72 +23,19 @@
 					<li class="tocpart">
 						<p><a href="part01.xhtml#P70004858060006B5"><span class="title" epub:type="title"><span class="label" epub:type="label">Part </span><span class="number" epub:type="ordinal">1 </span>Part Title</span></a></p>
 						<ol class="tocentrylist">
-							<li class="tocchapter">
-								<p><a href="chapter01.xhtml#P70004858060006B8"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">1 </span>Lists</span></a></p>
+							<li><p><a href="asides.xhtml#P70004858060006F9"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2 </span>Asides</span></a></p>
+							</li>
+							<li><p><a href="figures-tables.xhtml#P700048580600071E"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">3 </span>Figures and Tables</span></a></p>
+							</li>
+							<li><p><a href="links.xhtml#P7000485806000731"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">4 </span>Linked Content</span></a></p>
+							</li>
+							<li><p><a href="body-content.xhtml#P700048580600075C"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">6 </span>Typical Chapter Frontmatter and Backmatter Sections</span></a></p>
 								<div class="tocchapterbodymatter">
 									<ol class="tocentrylist">
-										<li class="toclevel1"><p><a href="chapter01.xhtml#P70004858060006B9"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.1 </span>TOC Lists</span></a></p></li>
-										<li class="tocobjectiveset toclevel1" epub:type="learning-objective"><p><a href="chapter01.xhtml#P70004858060006BA"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.2 </span>Learning Objectives</span></a></p></li>
-										<li class="tocobjectiveset toclevel1" epub:type="learning-objective"><p><a href="chapter01.xhtml#P70004858060006C3"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.3 </span>Learning Objectives (Example #2)</span></a></p></li>
-										<li class="toclevel1"><p><a href="chapter01.xhtml#P70004858060006D3"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.4 </span>Step List</span></a></p></li>
-										<li class="toclevel1"><p><a href="chapter01.xhtml#P70004858060006D4"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.5 </span>Un-ordered Lists</span></a></p></li>
-										<li class="toclevel1"><p><a href="chapter01.xhtml#P70004858060006D6"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.6 </span>Endnote Lists</span></a></p>
-											<ol class="tocentrylist">
-												<li class="toclevel2"><p><a href="chapter01.xhtml#P70004858060006D7"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.6.1 </span>Endnotes List</span></a></p></li>
-											</ol>
-										</li>
-										<li class="tocconclusion toclevel1"><p><a href="chapter01.xhtml#P70004858060006D8"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.7 </span>Keywords List</span></a></p></li>
-										<li class="tocpractice toclevel1"><p><a href="chapter01.xhtml#P70004858060006DD"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.8 </span>Assessment List</span></a></p>
-											<ol class="tocentrylist">
-												<li class="toclevel2"><p><a href="chapter01.xhtml#P7000485806001456"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.8.1 </span>Practice Subsection</span></a></p></li>
-											</ol>
-										</li>
-										<li class="toclevel1"><p><a href="chapter01.xhtml#P70004858060006E7"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.9 </span>Bibliographic List</span></a></p></li>
-										<li class="tocanswerset toclevel1"><p><a href="chapter01.xhtml#P70004858060006EA"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.10 </span>Answer List</span></a></p>
-											<ol class="tocentrylist">
-												<li class="toclevel2"><p><a href="chapter01.xhtml#P70004858060006EF"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.10.1 </span>Nested Answersetdiv Section</span></a></p></li>
-												<li class="toclevel2"><p><a href="chapter01.xhtml#P70004858060006F0"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.10.2 </span>Nested Answersetdiv Section</span></a></p></li>
-											</ol>
-										</li>
-										<li class="toclevel1"><p><a href="chapter01.xhtml#P70004858060016F0"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.11 </span>Static List</span></a></p></li>
-										<li class="toclevel1"><p><a href="chapter01.xhtml#P70004858060006F1"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.12 </span>Ordered Lists</span></a></p></li>
-										<li class="toclevel1"><p><a href="chapter01.xhtml#P70004858060006F2"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.12A </span>Misc. List Testing</span></a></p></li>
-										<li class="tocconclusion toclevel1"><p><a href="chapter01.xhtml#P70004858060006F3"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.13 </span>Summary</span></a></p>
-											<ol class="tocentrylist">
-												<li class="toclevel2"><p><a href="chapter01.xhtml#P70004858060006F5"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.13.1 </span>Nested Section</span></a></p>
-													<ol class="tocentrylist">
-														<li class="toclevel2"><p><a href="chapter01.xhtml#P70004858060006F6"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.13.1.1 </span>Nested Section</span></a></p>
-															<ol class="tocentrylist">
-																<li class="toclevel3"><p><a href="chapter01.xhtml#P70004858060006F7"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.13.1.1.1 </span>Nested Section</span></a></p>
-																	<ol class="tocentrylist">
-																		<li class="toclevel4"><p><a href="chapter01.xhtml#P70004858060006F8"><span class="title" epub:type="title"><span class="number" epub:type="ordinal">1.13.1.1.1.1 </span>Nested Section</span></a></p></li>
-																	</ol>
-																</li>
-															</ol>
-														</li>
-													</ol>
-												</li>
-											</ol>
-										</li>
+										<li class="tocintroduction"><p><a href="body-content.xhtml#P700048580600075E"><span class="title" epub:type="title">Introduction</span></a></p></li>
 									</ol>
 								</div>
 							</li>
-							<li><p><a href="chapter02.xhtml#P70004858060006F9"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2 </span>Asides</span></a></p>
-							</li>
-							<li><p><a href="chapter03.xhtml#P700048580600071E"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">3 </span>Figures and Tables</span></a></p>
-							</li>
-							<li><p><a href="chapter04.xhtml#P7000485806000731"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">4 </span>Linked Content</span></a></p>
-							</li>
-							<li><p><a href="chapter05.xhtml#P700048580600074B"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">5 </span>Sections</span></a></p>
-							</li>
-							<li><p><a href="chapter06.xhtml#P700048580600075C"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">6 </span>Typical Chapter Frontmatter and Backmatter Sections</span></a></p>
-								<div class="tocchapterbodymatter">
-									<ol class="tocentrylist">
-										<li class="tocintroduction"><p><a href="chapter06.xhtml#P700048580600075E"><span class="title" epub:type="title">Introduction</span></a></p></li>
-									</ol>
-								</div>
-							</li>
-							<li><p><a href="chapter07.xhtml#P700048580600077C"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">7 </span>Inlines</span></a></p></li>
 						</ol>
 					</li>
 				</ol>
