--- a/samples/structure-sample-01/EPUB/xhtml/index04.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/index04.xhtml
@@ -14,9 +14,9 @@
 			</header>
 			<ul>
 				<li class="index-entry" epub:type="index-entry" id="P70004858060007CD"><p>
-						<span class="index-term" epub:type="index-term">ZZZ destination for seealso link, </span><a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075D">16</a></p></li>
+						<span class="index-term" epub:type="index-term">ZZZ destination for seealso link, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
 				<li class="index-entry" epub:type="index-entry" id="P70004858060007CE"><p>
-						<span class="index-term" epub:type="index-term">ZZZ destination for see link, </span><a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075D">16</a></p></li>
+						<span class="index-term" epub:type="index-term">ZZZ destination for see link, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
 			</ul>
 		</section>
 	</body>
