--- a/samples/structure-sample-01/EPUB/xhtml/list-of-tables.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/list-of-tables.xhtml
@@ -13,9 +13,9 @@
 				<h1 class="title" epub:type="title">List of numbered tables</h1>
 			</header>
 			<ol>
-				<li><p><a href="chapter02.xhtml#P70004858060006FF">Table 2.1</a></p></li>
-				<li><p><a href="chapter03.xhtml#P7000485806000729">Table 3.1</a></p></li>
-				<li><p><a href="chapter03.xhtml#P700048580600072A">Table 3.2</a></p></li>
+				<li><p><a href="asides.xhtml#P70004858060006FF">Table 2.1</a></p></li>
+				<li><p><a href="figures-tables.xhtml#P7000485806000729">Table 3.1</a></p></li>
+				<li><p><a href="figures-tables.xhtml#P700048580600072A">Table 3.2</a></p></li>
 			</ol>
 		</nav>
 	</body>
