--- a/samples/structure-sample-01/EPUB/xhtml/index01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/index01.xhtml
@@ -14,22 +14,22 @@
 			</header>
 			<ul class="index-entry-list" epub:type="index-entry-list">
 				<li class="index-entry" epub:type="index-entry" id="P70004858060007BE">
-					<p><span class="index-term" epub:type="index-term">Index entry with a single page reference, </span><a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075D">16</a></p>
+					<p><span class="index-term" epub:type="index-term">Index entry with a single page reference, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
 				</li>
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007BF"><p><span class="index-term" epub:type="index-term">Index entry with multiple page references, </span><a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075F">17</a>, <a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P7000485806000768">18</a></p></li>
+				<li class="index-entry" epub:type="index-entry" id="P70004858060007BF"><p><span class="index-term" epub:type="index-term">Index entry with multiple page references, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075F">17</a>, <a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P7000485806000768">18</a></p></li>
 				<li class="index-entry" epub:type="index-entry" id="P70004858060007C0">
-					<p><span class="index-term" epub:type="index-term">Index entry with a page range, </span><span class="index-locator-range" epub:type="index-locator-range"><a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075D">16</a>–<a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075F">17</a></span></p>
+					<p><span class="index-term" epub:type="index-term">Index entry with a page range, </span><span class="index-locator-range" epub:type="index-locator-range"><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a>–<a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075F">17</a></span></p>
 				</li>
 				<li class="index-entry" epub:type="index-entry" id="P70004858060007C1">
-					<p><span class="index-term" epub:type="index-term">multi-level index entry, </span><a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075D">16</a></p>
+					<p><span class="index-term" epub:type="index-term">multi-level index entry, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
 					<ul class="index-entry-list" epub:type="index-entry-list">
 						<li class="index-entry" epub:type="index-entry" id="P70004858060007C2">
-							<p><span class="index-term" epub:type="index-term">2nd level entry, </span><a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075D">16</a></p>
+							<p><span class="index-term" epub:type="index-term">2nd level entry, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
 						</li>
 					</ul>
 				</li>
 				<li class="index-entry" epub:type="index-entry" id="P70004858060007C3">
-					<p><span class="index-term" epub:type="index-term">1st level entry, </span><a class="index-locator" epub:type="index-locator" href="chapter06.xhtml#P700048580600075D">16</a><span class="index-xref-related" epub:type="index-xref-related">see also <a class="termref" href="index04.xhtml#P70004858060007CD">destination for seealso link</a></span></p>
+					<p><span class="index-term" epub:type="index-term">1st level entry, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a><span class="index-xref-related" epub:type="index-xref-related">see also <a class="termref" href="index04.xhtml#P70004858060007CD">destination for seealso link</a></span></p>
 				</li>
 				<li class="index-entry" epub:type="index-entry" id="P70004858060007C4">
 					<p><span class="index-term" epub:type="index-term">A term used in "see" <span class="index-xref-preferred" epub:type="index-xref-preferred">See <a class="termref" href="index04.xhtml#P70004858060007CE">destination for see link</a></span></span></p>
