--- a/samples/structure-sample-01/EPUB/xhtml/list-of-illustrations.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/list-of-illustrations.xhtml
@@ -13,8 +13,8 @@
 				<h1 class="title" epub:type="title"><span class="pagebreak" title="x" epub:type="pagebreak" id="P70004858060006A1"/>List of illustrations</h1>
 			</header>
 			<ol class="tocentrylist">
-				<li><p><a href="chapter03.xhtml#P7000485806000721">Figure 3.1</a></p></li>
-				<li><p><a href="chapter03.xhtml#P7000485806000727">Opener figure</a></p></li>
+				<li><p><a href="figures-tables.xhtml#P7000485806000721">Figure 3.1</a></p></li>
+				<li><p><a href="figures-tables.xhtml#P7000485806000727">Opener figure</a></p></li>
 			</ol>
 		</nav>
 	</body>
