--- a/samples/structure-sample-01/EPUB/xhtml/list-of-sidebars.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/list-of-sidebars.xhtml
@@ -13,8 +13,7 @@
 				<h1 class="title" epub:type="title">List of sidebars</h1>
 			</header>
 			<ol class="tocentrylist">
-				<li class="tocsidebar"><p><a href="chapter02.xhtml#P70004858060006FC">Sidebar Label: Sidebar Title</a></p></li>
-				<li class="tocsidebar"><p><a href="chapter07.xhtml#P700048580600078C">Opener figure</a></p></li>
+				<li class="tocsidebar"><p><a href="asides.xhtml#P70004858060006FC">Sidebar Label: Sidebar Title</a></p></li>
 			</ol>
 		</nav>
 	</body>
